# sphinx-deprecated-deleted

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  pyproject.toml  readme.md  setup.py
.github/: dependabot.yml
.github/workflows/: release.yml
locales/ru/LC_MESSAGES/: sphinx_deprecated_deleted.po
src/sphinx_deprecated_deleted/: const.py  directive.py  ext.py
tools/: _tools_init.py  build.py  compile.py  extract.py  new_lang.py
